--- a/Sagua.Datatable/Components/SimplePager.razor
+++ b/Sagua.Datatable/Components/SimplePager.razor
@@ -1,39 +1,49 @@
-﻿@inherits Table.SimplePager<TModel>
-@typeparam TModel
+﻿@inherits Table.SimplePager
 
 <div class="d-flex">
     <div>
-
+        @(PageLimit * CurrentPage) - @(PageLimit * CurrentPage + PageLimit) of @TotalItems, Pages: @TotalPages
     </div>
     <div class="ml-auto">
         <nav aria-label="...">
             <ul class="pagination justify-content-end pagination-sm">
                 @{ 
-                    if(CurrentPage > 2)
+                    if(CurrentPage > 9)
                     {
-                         <li class="page-item"><a class="page-link" @onClick=GoToPage(CurrentPage-2) href="#">@(CurrentPage-2)</a></li>
+                        <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage-10)">@(CurrentPage-9)</a></li>
+                        <li class="page-item"><a class="page-link">...</a></li>
                     }
+
                     if(CurrentPage > 1)
                     {
-                         <li class="page-item"><a class="page-link"  @onClick=GoToPage(CurrentPage-1) href="#">@(CurrentPage-1)</a></li>
+                         <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage-2)">@(CurrentPage-1)</a></li>
+                    }
+                    if(CurrentPage > 0)
+                    {
+                         <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage-1)">@(CurrentPage)</a></li>
                     }
                 }
 
                 <li class="page-item active" aria-current="page">
                     <span class="page-link">
-                        @CurrentPage
-                        <span class="sr-only">(current)</span>
+                        @(CurrentPage + 1)
+                        <span class=" sr-only">(current)</span>
                     </span>
                 </li>
 
                 @{ 
                     if(CurrentPage + 1 <= TotalPages)
                     {
-                        <li class="page-item"><a class="page-link"  @onClick=GoToPage(CurrentPage+1) href="#">@(CurrentPage+1)</a></li>
+                        <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage+1)">@(CurrentPage+2)</a></li>
                     }
                     if(CurrentPage + 2 <= TotalPages)
                     {
-                        <li class="page-item"><a class="page-link"  @onClick=GoToPage(CurrentPage+2) href="#">@(CurrentPage+2)</a></li>
+                        <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage+2)">@(CurrentPage+3)</a></li>
+                    }
+                    if(CurrentPage + 10 <= TotalPages)
+                    {
+                        <li class="page-item"><a class="page-link">...</a></li>
+                        <li class="page-item"><a class="page-link" @onclick="() => GoToPage(CurrentPage+9)">@(CurrentPage+10)</a></li>
                     }
                 }
             </ul>
