--- a/Sagua.Datatable.Example/Shared/NavMenu.razor
+++ b/Sagua.Datatable.Example/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Paging table
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="orderedtable">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ordered table
+            </NavLink>
+        </li>
     </ul>
 </div>
 
