add datasource table

--- a/Sagua.Datatable/Components/SimplePager.razor
+++ b/Sagua.Datatable/Components/SimplePager.razor
@@ -5,7 +5,7 @@
         @(PageLimit * CurrentPage) - @(PageLimit * CurrentPage + PageLimit) of @TotalItems, Pages: @TotalPages
     </div>
     <div class="ml-auto">
-        <nav aria-label="...">
+        <nav>
             <ul class="pagination justify-content-end pagination-sm">
                 @{ 
                     if(CurrentPage > 9)
