--- a/Sagua.Datatable.Example/Shared/NavMenu.razor
+++ b/Sagua.Datatable.Example/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ordered table
             </NavLink>
         </li>
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="datasourcetable">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> DataSource table
+            </NavLink>
+        </li>
     </ul>
 </div>
 
