--- a/Sagua.Datatable.Example/Shared/NavMenu.razor
+++ b/Sagua.Datatable.Example/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> DataSource table
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fulltable">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Full table
+            </NavLink>
+        </li>
     </ul>
 </div>
 
