--- a/Sagua.Table/Components/Column.razor
+++ b/Sagua.Table/Components/Column.razor
@@ -14,16 +14,16 @@
                         {
                             if (OrderDirection == Abstractions.OrderDirection.Asc)
                             {
-                                <span>A</span>
+                                <span class="@TableTemplate.SortIconAsc"></span>
                             }
                             else
                             {
-                                <span>D</span>
+                                <span class="@TableTemplate.SortIconDsc"></span>
                             }
                         }
                         else
                         {
-                            <span>N</span>
+                            <span class="@TableTemplate.SortIconNone"></span>
                         }
                     }
                 </div>
