--- a/Sagua.Table/Components/Pager.razor
+++ b/Sagua.Table/Components/Pager.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TablePagerBase
 
-<div class="d-flex">
+<div class="d-flex p-1">
     <div>
         <div class="btn-group">
           <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
