--- a/Sagua.Table/Components/Column.razor
+++ b/Sagua.Table/Components/Column.razor
@@ -1,7 +1,7 @@
 ﻿@inherits TableColumnBase<TModel>
 @typeparam TModel
 
-<th>
+<th class="@(IsButtons?TableTemplate.TableButtonRowClass:string.Empty)">
     @{
         if (IsSortable)
         {
