--- a/Sagua.Table/Components/TablePlaceholder.razor
+++ b/Sagua.Table/Components/TablePlaceholder.razor
@@ -70,6 +70,11 @@
         _rows = rows;
     }
 
+    public void ConfigureRows(int rows)
+    {
+        _rows = rows;
+    }
+
     public void ShowPlaceholder()
     {
         _show = true;
